--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -2,37 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import transformers\n",
-    "from datasets import load_dataset, load_metric"
+    "from datasets import load_dataset, load_metric\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-cf0f959afad0821a\n"
+      "Using custom data configuration default-c418419686dc70af\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset csv/default to /Users/rakson/.cache/huggingface/datasets/csv/default-cf0f959afad0821a/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
+      "Downloading and preparing dataset csv/default to C:\\Users\\USER\\.cache\\huggingface\\datasets\\csv\\default-c418419686dc70af\\0.0.0\\652c3096f041ee27b04d2232d41f10547a8fecda3e284a79a0ec4053c916ef7a...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6b443f9e9f246afa3029e3e2a7523b0",
+       "model_id": "ffd50d62d999426484fb213eed0765bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +47,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24a4c1f2303b49f1af257d4b14ccbff4",
+       "model_id": "5d8459d06ca24e1e99c9203ff32c0456",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,30 +61,22 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5591120459040468369279f881179a8",
+       "model_id": "018a1fc775f64fa090db394c1ccea16e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
+       "0 tables [00:00, ? tables/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rakson/miniforge3/envs/pytorch-m1/lib/python3.8/site-packages/datasets/download/streaming_download_manager.py:714: FutureWarning: the 'mangle_dupe_cols' keyword is deprecated and will be removed in a future version. Please take steps to stop the use of 'mangle_dupe_cols'\n",
-      "  return pd.read_csv(xopen(filepath_or_buffer, \"rb\", use_auth_token=use_auth_token), **kwargs)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset csv downloaded and prepared to /Users/rakson/.cache/huggingface/datasets/csv/default-cf0f959afad0821a/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
+      "Dataset csv downloaded and prepared to C:\\Users\\USER\\.cache\\huggingface\\datasets\\csv\\default-c418419686dc70af\\0.0.0\\652c3096f041ee27b04d2232d41f10547a8fecda3e284a79a0ec4053c916ef7a. Subsequent calls will reuse this data.\n"
      ]
     }
    ],
@@ -101,29 +94,106 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(news)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dataset({\n",
-       "    features: ['title', 'desc', 'image', 'url', 'source', 'date'],\n",
-       "    num_rows: 142663\n",
-       "})"
+       "142663"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "news"
+    "len(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop df['desc'] is NA\n",
+    "df = df.dropna(subset=['desc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop  tiltle if length of title is biger than 20\n",
+    "df = df[df['title'].str.len() < 20] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47172"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1                芋傳媒\n",
+       "3         PTS.org.tw\n",
+       "14            RFI.fr\n",
+       "27            RFI.fr\n",
+       "31        PTS.org.tw\n",
+       "             ...    \n",
+       "142652        Zaobao\n",
+       "142654           芋傳媒\n",
+       "142656    PTS.org.tw\n",
+       "142658           芋傳媒\n",
+       "142661    NewTalk.tw\n",
+       "Name: source, Length: 47172, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_csv"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-m1",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -137,12 +207,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0d02cb7f77b50152c213c9b2419e4e894073666e74a5de278bb12e84304646b5"
+    "hash": "92ff639494a577100a707ca04ef5a3e0bad1a92312b69cd512a12c6da64cfce6"
    }
   }
  },
