--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -61,6 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "import string\n",
+    "\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"yihsuan/mt5_chinese_small\")\n",
