--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -2,41 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"./data/modified_data.csv\")\n",
+    "# drop df['desc'] is NA\n",
+    "df = df.dropna(subset=['content'])\n",
+    "df[\"content\"].replace(to_replace=[r\"\\\\t|\\\\n|\\\\r\", \"\\t|\\n|\\r\"], value=[\"\",\"\"], regex=True, inplace=True)\n",
+    "df[\"title\"].replace(to_replace=[r\"\\\\t|\\\\n|\\\\r\", \"\\t|\\n|\\r\"], value=[\"\",\"\"], regex=True, inplace=True)\n",
+    "# df = df[df['title'].str.len() < 20] \n",
+    "df.to_csv(\"./data/modified_data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using custom data configuration default-cf0f959afad0821a\n",
-      "Found cached dataset csv (/Users/rakson/.cache/huggingface/datasets/csv/default-cf0f959afad0821a/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "news = load_dataset(\"csv\", data_files=\"./data/news_collection.csv\", split=\"train\")\n",
-    "df = pd.DataFrame(news)\n",
-    "# drop df['desc'] is NA\n",
-    "df = df.dropna(subset=['desc'])\n",
-    "df = df[df['title'].str.len() < 20] \n",
-    "df.to_csv(\"./data/news_collection.csv\", index=False)"
+    "from rouge_chinese import Rouge\n",
+    "import jieba\n",
+    "\n",
+    "generated_summary = \"食藥署2021 TFDA醫療器材法規科學卓越中心研討\"\n",
+    "reference_summary = \"食藥署舉辦「2022 TFDA醫療器材法規科學卓越中心研討會」\"\n",
+    "\n",
+    "rouge = Rouge()\n",
+    "\n",
+    "TOKENIZE_CHINESE = lambda x: ' '.join(jieba.cut(x))\n",
+    "\n",
+    "# from transformers import AutoTokenizer\n",
+    "# model_checkpoint = \"csebuetnlp/mT5_multilingual_XLSum\"\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
+    "\n",
+    "# TOKENIZE_CHINESE = lambda x: ' '.join(\n",
+    "#     tokenizer.convert_ids_to_tokens(tokenizer(x).input_ids, skip_special_tokens=True)\n",
+    "# )\n",
+    "\n",
+    "scores = rouge.get_scores(\n",
+    "    hyps=[TOKENIZE_CHINESE(generated_summary)], \n",
+    "    refs=[TOKENIZE_CHINESE(reference_summary)]\n",
+    ")[0]\n",
+    "print('ROUGE:', scores)\n",
+    "scores = rouge.get_scores(\n",
+    "    hyps=[generated_summary], \n",
+    "    refs=[reference_summary]\n",
+    ")[0]\n",
+    "print('wrong ROUGE:', scores)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-m1",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -50,12 +70,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 | packaged by conda-forge | (default, Nov 22 2022, 08:49:06) \n[Clang 14.0.6 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0d02cb7f77b50152c213c9b2419e4e894073666e74a5de278bb12e84304646b5"
+    "hash": "eb022b0a3143723ded761c35a12cb3644530daea512f8aed4677986e45294f05"
    }
   }
  },
