--- a/final_project_chinese.ipynb
+++ b/final_project_chinese.ipynb
@@ -369,9 +369,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n",
+      "食藥署2022 TFDA醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調\n",
+      "食藥署舉辦2022 TFDA醫療器材法規科學卓越中心研討會\n",
+      "醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調和落實\n",
+      "亞太區域採認醫療器材健康與功效評估 食藥署2020 TFDA醫療器材法規科學\n",
+      "食藥署2021 TFDA醫療器材法規科學卓越中心研討會\n",
+      "食藥署2021 TFDA醫療器材法規科學卓越中心研討會(Medical Devices Regulatory Science Center of Excellence\n",
+      "食藥署舉辦2022 TFDA醫療器材法規科學卓越中心研討會\n",
+      "亞太區域採認醫療器材國際標準 醫療器材法規科學卓越中心研討會\n",
+      "2021 TFDA醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調和落實\n",
+      "食藥署2022 TFDA醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer\n",
@@ -401,20 +419,23 @@
     "    max_length=512\n",
     ")\n",
     "input_ids = input_ids.to(device)\n",
-    "generated_tokens = model.generate(\n",
-    "    input_ids[\"input_ids\"],\n",
-    "    attention_mask=input_ids[\"attention_mask\"],\n",
-    "    max_length=32,\n",
-    "    no_repeat_ngram_size=2,\n",
-    "    num_beams=4\n",
-    ")\n",
+    "for i in range(10):\n",
+    "    generated_tokens = model.generate(\n",
+    "        input_ids[\"input_ids\"],\n",
+    "        attention_mask=input_ids[\"attention_mask\"],\n",
+    "        max_length=32,\n",
+    "        # no_repeat_ngram_size=2,\n",
+    "        num_beams=8,\n",
+    "        do_sample=True,\n",
+    "        temperature=1.5\n",
+    "    )\n",
     "\n",
-    "summary = tokenizer.decode(\n",
-    "    generated_tokens[0],\n",
-    "    skip_special_tokens=True,\n",
-    "    clean_up_tokenization_spaces=False\n",
-    ")\n",
-    "print(summary)"
+    "    summary = tokenizer.decode(\n",
+    "        generated_tokens[0],\n",
+    "        skip_special_tokens=True,\n",
+    "        clean_up_tokenization_spaces=False\n",
+    "    )\n",
+    "    print(summary)"
    ]
   }
  ],
