--- a/final_project_chinese.ipynb
+++ b/final_project_chinese.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -377,16 +377,16 @@
      "output_type": "stream",
      "text": [
       "Using cuda device\n",
-      "食藥署2022 TFDA醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調\n",
-      "食藥署舉辦2022 TFDA醫療器材法規科學卓越中心研討會\n",
-      "醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調和落實\n",
-      "亞太區域採認醫療器材健康與功效評估 食藥署2020 TFDA醫療器材法規科學\n",
-      "食藥署2021 TFDA醫療器材法規科學卓越中心研討會\n",
-      "食藥署2021 TFDA醫療器材法規科學卓越中心研討會(Medical Devices Regulatory Science Center of Excellence\n",
-      "食藥署舉辦2022 TFDA醫療器材法規科學卓越中心研討會\n",
-      "亞太區域採認醫療器材國際標準 醫療器材法規科學卓越中心研討會\n",
-      "2021 TFDA醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調和落實\n",
-      "食藥署2022 TFDA醫療器材法規科學卓越中心研討會 促進各國醫療器材法規調\n"
+      "食藥署舉辦2021 TFDA醫療器材法規科學卓越中心研討會\n",
+      "「2022 TFDA醫療器材法規科學卓越中心研討會」暨國際監管管理署舉辦2022 TFDA醫療\n",
+      "健康週期健康週期研討會,強化醫療器材法規管理,促進人民醫療器材法規調和\n",
+      "健康療器材療用國際標準於亞太區域,推廣醫療器材健康與功效評估,提升醫療器\n",
+      "慶祝亞太區域舉辦「2022 TFDA醫療器材法規科學卓越中心研討會(Medical Devices Regula\n",
+      "食品藥物管理署舉辦「2022 TFDA醫療器材法規科學卓越中心研討會」\n",
+      "食品藥物管理署舉辦2022 TFDA醫療器材法規科學卓越中心研討會(Medical Devices Regulatory Science\n",
+      "醫療器材法規科學卓越中心研討會舉辦,進入國際標準並提升醫療器材法規調和\n",
+      "食藥署舉辦「2022 TFDA醫療器材法規科學卓越中心研討會(Medical Devices Regulatory Science Center\n",
+      "國際標準進而達到醫療器材法規協和,食藥署開跑2022 TFDA醫療器材法規科\n"
      ]
     }
    ],
@@ -401,6 +401,7 @@
     "model_checkpoint = \"yihsuan/mt5_chinese_small\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_checkpoint)\n",
+    "model.load_state_dict(torch.load('./models/epoch_9_valid_rouge_42.3221_model_weights.bin'))\n",
     "model = model.to(device)\n",
     "\n",
     "article_text = \"\"\"\n",
@@ -427,7 +428,7 @@
     "        # no_repeat_ngram_size=2,\n",
     "        num_beams=8,\n",
     "        do_sample=True,\n",
-    "        temperature=1.5\n",
+    "        temperature=2.0,\n",
     "    )\n",
     "\n",
     "    summary = tokenizer.decode(\n",
