--- a/final_project_chinese.ipynb
+++ b/final_project_chinese.ipynb
@@ -24,39 +24,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-73241de3c0e38e34\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset csv/default to C:/Users/love4/.cache/huggingface/datasets/csv/default-73241de3c0e38e34/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading data files: 100%|██████████| 1/1 [00:00<?, ?it/s]\n",
-      "Extracting data files: 100%|██████████| 1/1 [00:00<?, ?it/s]\n",
-      "0 tables [00:00, ? tables/s]c:\\Users\\love4\\anaconda3\\envs\\pytorch\\lib\\site-packages\\datasets\\download\\streaming_download_manager.py:714: FutureWarning: the 'mangle_dupe_cols' keyword is deprecated and will be removed in a future version. Please take steps to stop the use of 'mangle_dupe_cols'\n",
-      "  return pd.read_csv(xopen(filepath_or_buffer, \"rb\", use_auth_token=use_auth_token), **kwargs)\n",
-      "                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset csv downloaded and prepared to C:/Users/love4/.cache/huggingface/datasets/csv/default-73241de3c0e38e34/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 111.47it/s]\n",
+      "Using custom data configuration default-1a4aca4ac540a895\n",
+      "Found cached dataset csv (C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
+      "100%|██████████| 1/1 [00:00<00:00, 334.58it/s]\n",
+      "Loading cached split indices for dataset at C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-0bae51ae444be2c7.arrow and C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-041f42b44b509f42.arrow\n",
+      "Loading cached split indices for dataset at C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-d21fe8f15c9ff85f.arrow and C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-1cef2e45a24af06e.arrow\n",
+      "Loading cached shuffled indices for dataset at C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-1cd612cd5942ebaa.arrow\n",
+      "Loading cached shuffled indices for dataset at C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-b3879a437c8aa0fd.arrow\n",
+      "Loading cached shuffled indices for dataset at C:/Users/love4/.cache/huggingface/datasets/csv/default-1a4aca4ac540a895/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317\\cache-411787ead64605c9.arrow\n",
       "c:\\Users\\love4\\anaconda3\\envs\\pytorch\\lib\\site-packages\\transformers\\optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n"
      ]
@@ -74,6 +49,7 @@
     "import os\n",
     "from datasets import load_dataset\n",
     "import jieba\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "max_dataset_size = 200000\n",
     "max_input_length = 512\n",
@@ -81,7 +57,7 @@
     "train_batch_size = 4\n",
     "test_batch_size = 4\n",
     "learning_rate = 2e-5\n",
-    "epoch_num = 3\n",
+    "epoch_num = 10\n",
     "beam_size = 4\n",
     "no_repeat_ngram_size = 2\n",
     "\n",
@@ -96,14 +72,14 @@
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(f'Using {device} device')\n",
     "\n",
-    "data = load_dataset(\"csv\", data_files=\"./data/modified_data.csv\")\n",
+    "data = load_dataset(\"csv\", data_files=\"./data/data.csv\")\n",
     "\n",
-    "datasets_train_test = data[\"train\"].train_test_split(test_size=500)\n",
-    "datasets_train_validation = datasets_train_test[\"train\"].train_test_split(test_size=500)\n",
+    "datasets_train_test = data[\"train\"].train_test_split(test_size=1000)\n",
+    "datasets_train_validation = datasets_train_test[\"train\"].train_test_split(test_size=1000)\n",
     "\n",
     "data[\"train\"] = datasets_train_validation[\"train\"].shuffle()\n",
-    "data[\"validation\"] = datasets_train_validation[\"test\"].shuffle().select(range(500))\n",
-    "data[\"test\"] = datasets_train_test[\"test\"].shuffle().select(range(500))\n",
+    "data[\"validation\"] = datasets_train_validation[\"test\"].shuffle().select(range(1000))\n",
+    "data[\"test\"] = datasets_train_test[\"test\"].shuffle().select(range(1000))\n",
     "\n",
     "model_checkpoint = \"yihsuan/mt5_chinese_small\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
@@ -202,6 +178,7 @@
     "    num_training_steps=epoch_num*len(train_dataloader),\n",
     ")\n",
     "\n",
+    "# writer = SummaryWriter(log_dir='./logs')\n",
     "# total_loss = 0.\n",
     "# best_avg_rouge = 0.\n",
     "# for t in range(epoch_num):\n",
@@ -209,6 +186,11 @@
     "#     total_loss = train_loop(train_dataloader, model, optimizer, lr_scheduler, t+1, total_loss)\n",
     "#     valid_rouge = test_loop(valid_dataloader, model, mode='Valid')\n",
     "#     rouge_avg = valid_rouge['avg']\n",
+    "#     writer.add_scalar('train/loss', total_loss/(t+1), t+1)\n",
+    "#     writer.add_scalar('valid/rouge-1', valid_rouge['rouge-1'], t+1)\n",
+    "#     writer.add_scalar('valid/rouge-2', valid_rouge['rouge-2'], t+1)\n",
+    "#     writer.add_scalar('valid/rouge-l', valid_rouge['rouge-l'], t+1)\n",
+    "#     writer.add_scalar('valid/rouge-avg', rouge_avg, t+1)\n",
     "#     if rouge_avg > best_avg_rouge:\n",
     "#         best_avg_rouge = rouge_avg\n",
     "#         print('saving new weights...\\n')\n",
@@ -225,20 +207,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/16 [00:00<?, ?it/s]c:\\Users\\love4\\anaconda3\\envs\\pytorch\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3546: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  0%|          | 0/32 [00:00<?, ?it/s]c:\\Users\\love4\\anaconda3\\envs\\pytorch\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3546: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
       "  warnings.warn(\n",
       "Building prefix dict from the default dictionary ...\n",
       "Loading model from cache C:\\Users\\love4\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.356 seconds.\n",
+      "Loading model cost 0.379 seconds.\n",
       "Prefix dict has been built successfully.\n",
-      "100%|██████████| 16/16 [00:25<00:00,  1.56s/it]"
+      "100%|██████████| 32/32 [00:44<00:00,  1.40s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Rouge1: 37.52 Rouge2: 24.76 RougeL: 35.08\n",
+      "Test Rouge1: 34.87 Rouge2: 22.32 RougeL: 32.71\n",
       "\n"
      ]
     },
@@ -252,10 +234,10 @@
     {
      "data": {
       "text/plain": [
-       "{'rouge-1': 37.522171435657086,\n",
-       " 'rouge-2': 24.763397079925667,\n",
-       " 'rouge-l': 35.07663318858592,\n",
-       " 'avg': 32.45406723472289}"
+       "{'rouge-1': 34.8747193003321,\n",
+       " 'rouge-2': 22.3236517124648,\n",
+       " 'rouge-l': 32.707703199382706,\n",
+       " 'avg': 29.96869140405987}"
       ]
      },
      "execution_count": 2,
@@ -276,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -290,32 +272,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/16 [00:00<?, ?it/s]c:\\Users\\love4\\anaconda3\\envs\\pytorch\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3546: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "100%|██████████| 16/16 [00:22<00:00,  1.39s/it]"
+      "100%|██████████| 32/32 [00:41<00:00,  1.30s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Rouge1: 46.11 Rouge2: 34.27 RougeL: 43.88\n",
+      "Test Rouge1: 42.03 Rouge2: 29.74 RougeL: 39.92\n",
       "\n",
       "saving predicted results...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "\n",
-    "model.load_state_dict(torch.load('./models/epoch_9_valid_rouge_42.3221_model_weights.bin'))\n",
+    "model.load_state_dict(torch.load('./models/epoch_9_valid_rouge_38.3036_model_weights.bin'))\n",
     "\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
@@ -401,7 +374,7 @@
     "model_checkpoint = \"yihsuan/mt5_chinese_small\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_checkpoint)\n",
-    "model.load_state_dict(torch.load('./models/epoch_9_valid_rouge_42.3221_model_weights.bin'))\n",
+    "model.load_state_dict(torch.load('./models/epoch_9_valid_rouge_38.3036_model_weights.bin'))\n",
     "model = model.to(device)\n",
     "\n",
     "article_text = \"\"\"\n",
