--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -2,19 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"./data/modified_data.csv\")\n",
+    "df = pd.read_csv(\"./data/news.csv\")\n",
+    "# df.rename(columns={'Subject_': 'title', 'Content': 'content'}, inplace=True)\n",
     "# drop df['desc'] is NA\n",
+    "df = df.dropna(subset=['title'])\n",
     "df = df.dropna(subset=['content'])\n",
     "df[\"content\"].replace(to_replace=[r\"\\\\t|\\\\n|\\\\r\", \"\\t|\\n|\\r\"], value=[\"\",\"\"], regex=True, inplace=True)\n",
     "df[\"title\"].replace(to_replace=[r\"\\\\t|\\\\n|\\\\r\", \"\\t|\\n|\\r\"], value=[\"\",\"\"], regex=True, inplace=True)\n",
     "# df = df[df['title'].str.len() < 20] \n",
-    "df.to_csv(\"./data/modified_data.csv\", index=False)"
+    "df.to_csv(\"./data/news.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.read_csv(\"./data/news.csv\")\n",
+    "df2 = pd.read_csv(\"./data/modified_data.csv\")\n",
+    "df = pd.concat([df1, df2], ignore_index=True)\n",
+    "df.to_csv(\"./data/data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import dataframe_image as dfi\n",
+    "\n",
+    "df = pd.read_json(\"test_data_pred.json\", lines=True)\n",
+    "df.drop(columns=['document'], inplace=True)\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "dfi.export(df[:10], './dataframe.png')"
    ]
   },
   {
